md-docs/cli/cli-ref/baremetal/cli-ref/v0/server/index.md
[Документация Yandex Cloud](../../../../../../index.md) > [Интерфейс командной строки](../../../../../index.md) > [Справочник (англ.)](../../../../index.md) > [baremetal](../../index.md) > [v0](../index.md) > server > Overview

# yc baremetal v0 server

Manage servers

#### Command Usage

Syntax:

`yc baremetal v0 server <command>`

#### Command Tree

- [yc baremetal v0 server add-labels](add-labels.md) — Add labels to specified server

- [yc baremetal v0 server create](create.md) — Create a server

- [yc baremetal v0 server get](get.md) — Show information about the specified server

- [yc baremetal v0 server list](list.md) — List servers

- [yc baremetal v0 server list-operations](list-operations.md) — List operations for the specified server

- [yc baremetal v0 server power-off](power-off.md) — Power off the specified server

- [yc baremetal v0 server power-on](power-on.md) — Power on the specified server

- [yc baremetal v0 server reboot](reboot.md) — Reboot the specified server

- [yc baremetal v0 server reinstall](reinstall.md) — Reinstall the specified server

- [yc baremetal v0 server remove-labels](remove-labels.md) — Remove labels from specified server

- [yc baremetal v0 server update](update.md) — Update the specified server

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#